make compileable with javac 1.4